src/objects/Process__c.object
<CustomObject>
    <description>XLR8 custom object for the Process Engine master record.</description>
    <fields>
        <fullName>AutoCreateTask_ForLayout__c</fullName>
        <description>Display an image when &quot;Auto Create Task&quot; is ON</description>
        <formula>IF(
OR( 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8dev-dev-ed.my.salesforce.com/&apos;, 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8stage-dev-ed.my.salesforce.com/&apos;,
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8dev-dev-ed--c.na11.visual.force.com/&apos;) ,
IF(Auto_Create_Tasks__c, IMAGE(&quot;/resource/Task_image_done&quot;, &quot;Auto Create&quot;,14,14),IMAGE(&quot;/resource/RedCross&quot;, &quot;Do Not Auto Create&quot;,14,14)),
IF(Auto_Create_Tasks__c, IMAGE(&quot;/resource/XLR8CS__Task_image_done&quot;, &quot;Auto Create&quot;,14,14),IMAGE(&quot;/resource/XLR8CS__RedCross&quot;, &quot;Do Not Auto Create&quot;,14,14))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Create Tasks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Create_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when you want to auto create tasks for the steps</description>
        <inlineHelpText>Check this box when you want to auto create tasks for the steps</inlineHelpText>
        <label>Auto Create Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_Steps__c</fullName>
        <label>Cancelled Steps</label>
        <summaryFilterItems>
            <field>Process_Step__c.Status__c</field>
            <operation>contains</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Process_Step__c.Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>TEXT(Process_Template__r.Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Steps__c</fullName>
        <label>Completed Steps</label>
        <summaryFilterItems>
            <field>Process_Step__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Process_Step__c.Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>Enter the target completion date for the entire process.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>SuperTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Auto_Create_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Auto Create Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NA_Steps__c</fullName>
        <description>Used for the formula field Process Status</description>
        <label>N/A Steps</label>
        <summaryFilterItems>
            <field>Process_Step__c.Status__c</field>
            <operation>equals</operation>
            <value>N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Process_Step__c.Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>IF(Total_Steps__c==0,0,(Completed_Steps__c +  NA_Steps__c)/Total_Steps__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Process_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Template</label>
        <referenceTo>Process_Template__c</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>IF(
OR( 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8dev-dev-ed.my.salesforce.com/&apos;, 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8stage-dev-ed.my.salesforce.com/&apos;) ,

IF(Total_Steps__c==0 || (Completed_Steps__c + NA_Steps__c) == 0,IMAGE(&quot;/resource/white_progress_100&quot;, &quot;white&quot;, 15, 100) &amp; &apos; 0%&apos;, 
IF(Total_Steps__c == (Completed_Steps__c + NA_Steps__c),IMAGE(&quot;/resource/blue_progress_100&quot;, &quot;green&quot;, 15, 100) &amp; &apos; 100%&apos;, 
IMAGE(&quot;/resource/blue_progress&quot;, &quot;green&quot;, 15, IF(Total_Steps__c==0,0,( (Completed_Steps__c + NA_Steps__c)/Total_Steps__c)*100)) &amp; IMAGE(&quot;/resource/white_progress&quot;, &quot;white&quot;, 15, 100 - (IF(Total_Steps__c==0,0,( (Completed_Steps__c + NA_Steps__c)/Total_Steps__c)*100) ))&amp; &apos; &apos; &amp; TEXT(ROUND(IF(Total_Steps__c==0,0,( (Completed_Steps__c + NA_Steps__c)/Total_Steps__c)*100),0)) &amp; &apos;%&apos;)),

IF(Total_Steps__c==0 || (Completed_Steps__c + NA_Steps__c) == 0,IMAGE(&quot;/resource/XLR8CS__white_progress_100&quot;, &quot;white&quot;, 15, 100) &amp; &apos; 0%&apos;, 
IF(Total_Steps__c == (Completed_Steps__c + NA_Steps__c),IMAGE(&quot;/resource/XLR8CS__blue_progress_100&quot;, &quot;green&quot;, 15, 100) &amp; &apos; 100%&apos;, 
IMAGE(&quot;/resource/XLR8CS__blue_progress&quot;, &quot;green&quot;, 15, IF(Total_Steps__c==0,0,( (Completed_Steps__c + NA_Steps__c)/Total_Steps__c)*100)) &amp; IMAGE(&quot;/resource/XLR8CS__white_progress&quot;, &quot;white&quot;, 15, 100 - (IF(Total_Steps__c==0,0,( (Completed_Steps__c + NA_Steps__c)/Total_Steps__c)*100) ))&amp; &apos; &apos; &amp; TEXT(ROUND(IF(Total_Steps__c==0,0,( (Completed_Steps__c + NA_Steps__c)/Total_Steps__c)*100),0)) &amp; &apos;%&apos;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(OR(Total_Steps__c == 0, AND(Total_Steps__c &gt; 0, Cancelled_Steps__c == 0,  Completed_Steps__c == 0, NA_Steps__c == 0 )), &apos;Not Started&apos;,
IF(Cancelled_Steps__c &gt; 0, &apos;Cancelled&apos;, 
IF( Total_Steps__c == (Completed_Steps__c + NA_Steps__c  ), &apos;Completed&apos;, &apos;In Progress&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <formula>TEXT(Process_Template__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Steps__c</fullName>
        <label>Total Steps</label>
        <summaryForeignKey>Process_Step__c.Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Completed_Steps__c</columns>
        <columns>NA_Steps__c</columns>
        <columns>Total_Steps__c</columns>
        <columns>Progress__c</columns>
        <columns>Deadline__c</columns>
        <columns>AutoCreateTask_ForLayout__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_record_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND(Template_Type__c == &apos;Entity&apos;, OR(ISBLANK( Entity__c ), ISCHANGED( Entity__c ))), 
AND(Template_Type__c == &apos;Contact&apos;, OR(ISBLANK( Contact__c ), ISCHANGED( Contact__c ))), 
AND(Template_Type__c == &apos;Case&apos;, OR(ISBLANK( Case__c ), ISCHANGED( Case__c ))), 
AND(Template_Type__c == &apos;Lead&apos;, OR(ISBLANK( Lead__c ), ISCHANGED( Lead__c ))), 
AND(Template_Type__c == &apos;Opportunity&apos;, OR(ISBLANK( Opportunity__c ), ISCHANGED( Opportunity__c )))
)</errorConditionFormula>
        <errorMessage>Parent record cannot be blank or edited</errorMessage>
    </validationRules>
</CustomObject>